{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 27,
  "lineage": "a68b823d-27c3-6b28-94c2-40567e161555",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "primary_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ffe3c48a9991133",
            "arn": "arn:aws:ec2:us-east-1:580801916917:instance/i-0eb3e072c8b8abd02",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb3e072c8b8abd02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05fe14379d5e68104",
            "private_dns": "ip-10-0-1-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.13",
            "public_ip": "54.226.141.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0661f4f8fb40ffbd2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5aa8f211044e7b5",
            "tags": {
              "Name": "primary-ec2-instance"
            },
            "tags_all": {
              "Name": "primary-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cbef58197e09c2c7"
            ]
          },
          "dependencies": [
            "aws_security_group.primary_ec2_sg",
            "module.primary_vpc.aws_subnet.public",
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secondary_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ee755be0cd7555c",
            "arn": "arn:aws:ec2:us-west-2:580801916917:instance/i-0568dd14f23542bcc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0568dd14f23542bcc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f1edccfd370b5ba",
            "private_dns": "ip-10-1-1-73.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.73",
            "public_ip": "35.94.29.30",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b86e8dc2c3033609",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a7987714de77acb",
            "tags": {
              "Name": "secondary-ec2-instance"
            },
            "tags_all": {
              "Name": "secondary-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c70abe6aff09f68"
            ]
          },
          "dependencies": [
            "aws_security_group.secondary_ec2_sg",
            "module.secondary_vpc.aws_subnet.public",
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:security-group/sg-0cbef58197e09c2c7",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbef58197e09c2c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from all",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH within VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "primary-ec2-sg",
            "name_prefix": "",
            "owner_id": "580801916917",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primary-ec2-sg"
            },
            "tags_all": {
              "Name": "primary-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3d236c12c925a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secondary_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:security-group/sg-04c70abe6aff09f68",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c70abe6aff09f68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from all",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Allow SSH within VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secondary-ec2-sg",
            "name_prefix": "",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secondary-ec2-sg"
            },
            "tags_all": {
              "Name": "secondary-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05821597e9b3b1330"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:internet-gateway/igw-00814d81b281b8a9e",
            "id": "igw-00814d81b281b8a9e",
            "owner_id": "580801916917",
            "region": "us-east-1",
            "tags": {
              "Name": "primary"
            },
            "tags_all": {
              "Name": "primary"
            },
            "vpc_id": "vpc-01f3d236c12c925a7"
          },
          "dependencies": [
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:route-table/rtb-0d50adfca30c6dc48",
            "id": "rtb-0d50adfca30c6dc48",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f3d236c12c925a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:route-table/rtb-0a055a3803835b60c",
            "id": "rtb-0a055a3803835b60c",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00814d81b281b8a9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f3d236c12c925a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.primary_vpc.aws_internet_gateway.igw",
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3d80ea5d0b0ed4b",
            "region": "us-east-1",
            "route_table_id": "rtb-0d50adfca30c6dc48",
            "subnet_id": "subnet-0e8993d96538a35ad"
          },
          "dependencies": [
            "module.primary_vpc.aws_route_table.private",
            "module.primary_vpc.aws_subnet.private",
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035bb6a042bc1147d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a055a3803835b60c",
            "subnet_id": "subnet-0a5aa8f211044e7b5"
          },
          "dependencies": [
            "module.primary_vpc.aws_internet_gateway.igw",
            "module.primary_vpc.aws_route_table.public",
            "module.primary_vpc.aws_subnet.public",
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:subnet/subnet-0e8993d96538a35ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8993d96538a35ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "primary"
            },
            "tags_all": {
              "Name": "primary"
            },
            "vpc_id": "vpc-01f3d236c12c925a7"
          },
          "dependencies": [
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:subnet/subnet-0a5aa8f211044e7b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5aa8f211044e7b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "primary"
            },
            "tags_all": {
              "Name": "primary"
            },
            "vpc_id": "vpc-01f3d236c12c925a7"
          },
          "dependencies": [
            "module.primary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580801916917:vpc/vpc-01f3d236c12c925a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01128f8c2fb049846",
            "default_route_table_id": "rtb-0d37bd152115f383b",
            "default_security_group_id": "sg-0a49a5eded023e940",
            "dhcp_options_id": "dopt-0c449bc4bfa852ca3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f3d236c12c925a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d37bd152115f383b",
            "owner_id": "580801916917",
            "region": "us-east-1",
            "tags": {
              "Name": "primary"
            },
            "tags_all": {
              "Name": "primary"
            }
          }
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:internet-gateway/igw-05728b44cbe99517a",
            "id": "igw-05728b44cbe99517a",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary"
            },
            "tags_all": {
              "Name": "secondary"
            },
            "vpc_id": "vpc-05821597e9b3b1330"
          },
          "dependencies": [
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:route-table/rtb-07cec421636ea2062",
            "id": "rtb-07cec421636ea2062",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05821597e9b3b1330"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:route-table/rtb-02f0e670e98de983a",
            "id": "rtb-02f0e670e98de983a",
            "owner_id": "580801916917",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05728b44cbe99517a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05821597e9b3b1330"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_internet_gateway.igw",
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d21109f0a53090d5",
            "region": "us-west-2",
            "route_table_id": "rtb-07cec421636ea2062",
            "subnet_id": "subnet-0b60c9369aa1b2450"
          },
          "dependencies": [
            "module.secondary_vpc.aws_route_table.private",
            "module.secondary_vpc.aws_subnet.private",
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ea9122bca57157",
            "region": "us-west-2",
            "route_table_id": "rtb-02f0e670e98de983a",
            "subnet_id": "subnet-00a7987714de77acb"
          },
          "dependencies": [
            "module.secondary_vpc.aws_internet_gateway.igw",
            "module.secondary_vpc.aws_route_table.public",
            "module.secondary_vpc.aws_subnet.public",
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:subnet/subnet-0b60c9369aa1b2450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b60c9369aa1b2450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary"
            },
            "tags_all": {
              "Name": "secondary"
            },
            "vpc_id": "vpc-05821597e9b3b1330"
          },
          "dependencies": [
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:subnet/subnet-00a7987714de77acb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a7987714de77acb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580801916917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary"
            },
            "tags_all": {
              "Name": "secondary"
            },
            "vpc_id": "vpc-05821597e9b3b1330"
          },
          "dependencies": [
            "module.secondary_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:580801916917:vpc/vpc-05821597e9b3b1330",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08613f01089de2697",
            "default_route_table_id": "rtb-0a943c50a029b578f",
            "default_security_group_id": "sg-0f6096e1a976b29c9",
            "dhcp_options_id": "dopt-0e33a4fe1f890fb8e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05821597e9b3b1330",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a943c50a029b578f",
            "owner_id": "580801916917",
            "region": "us-west-2",
            "tags": {
              "Name": "secondary"
            },
            "tags_all": {
              "Name": "secondary"
            }
          }
        }
      ]
    }
  ]
}